--- a/css/style.css
+++ b/css/style.css
@@ -13,13 +13,15 @@ body{
     background-color: #8e68ff;
     background-image: url('');
     background-repeat: no-repeat;
+    background-position: 50% 50%;
     color:#FFFFFF;
     text-align: center;
+    text-shadow: 2px 2px 2px #000000;
     background-size: 100%;
     margin-bottom:25px;
     font-size: 150%;
 }
-.preview{
+.option{
 		width:10%;
 		margin-left:17%;
     border: 10px solid black;
@@ -29,7 +31,4 @@ img{
 }
 .flex {
   display: flex;
-}
-img:focus {
-  
 }
